cmake_minimum_required(VERSION 3.29)
project(NeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(NeetCode
    BestTimeToBuyAndSellStock.cpp
        "49. Group Anagrams.cpp"
        "217. Contains Duplicate.cpp"
        " 167. Two Sum II - Input Array Is Sorted.cpp"
        "1. Two Sum.cpp"
        "Hard/74. Search a 2D Matrix.cpp"
        "Medium/875. Koko Eating Bananas.cpp"
        "Medium/153. Find Minimum in Rotated Sorted Array.cpp"
        "Medium/19. Remove Nth Node From End of List.cpp"
        "Medium/138. Copy List with Random Pointer .cpp"
        "Medium/2. Add Two Numbers.cpp"
        "Easy/20. Valid Parentheses.cpp"
        "Easy/226. Invert Binary Tree.cpp"
        "Easy/226. Invert Binary Tree.cpp")
